--- a/interface/src/Board/styles.css
+++ b/interface/src/Board/styles.css
@@ -12,6 +12,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+
+.validmove {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: rgba(30, 144, 255, 0.4);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
 }
 
 .square.white {
